@@ -1,12 +1,13 @@
 <size=20><b>Version 2.3.4-preview.3</b></size>
 
-- Added conditional compilation to support removal of optional physiscs and physics2D modules
+- Added conditional compilation to support removal of optional physics and physics2D modules
 - Added CinemachineCore.GetBlendOverride delegate to allow applications to override any vcam blend when it happens
 - When a blend is cancelled by the opposite blend, reduce the blend time
 - Added support for PostProcessing V3 - now called CinemachineVolumeSttings
 - Orthographic cameras allow a Near Clip of 0
 - Timeline won't auto-create CM brains when something dragged onto it
 - Confiner: Improvement in automatic path invalidation when number of path points path changes
+- Bugfix: Path handles no longer scale with the path object
 - Bugfix: Framing Transposer Center on Activate was not working properly (fogbugz 1129824)
 - Bugfix: FreeLook inherit position
 - Bugfix: collider was pushing camera too far if there were multiple overlapping obstacles
